--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -11,17 +11,20 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/shopping-cart">Shopping Cart</a>
         </li>
+        <li *ngIf="!user" class="nav-item">
+          <a class="nav-link" routerLink="/login">Login</a>
+        </li>
 
-        <li ngbDropdown class="nav-item dropdown">
+        <li *ngIf="user" ngbDropdown class="nav-item dropdown">
           <a ngbDropdownToggle class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
             data-bs-toggle="dropdown" aria-expanded="false">
-            Username
+            {{ user.displayName}}
           </a>
           <ul ngbDropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <li><a class="dropdown-item" href="/my/orders">My Orders</a></li>
             <li><a class="dropdown-item" href="/admin/orders">Manage Orders</a></li>
             <li><a class="dropdown-item" href="/admin/products">Manage Products</a></li>
-            <li><a class="dropdown-item">Log Out</a></li>
+            <li><a class="dropdown-item" (click)="logout()">Log Out</a></li>
           </ul>
         </li>
       </ul>
